--- a/main/css/blue_lagoon/default.css
+++ b/main/css/blue_lagoon/default.css
@@ -356,11 +356,13 @@ select, input[type=checkbox], input[type=radio], input[type=button], input[type=
  *  FOOTER STYLES                                    *
  *****************************************************/
 #footer {
-	height:3em;
-	background-image: url(images/tab-repeat.png);
-	background-repeat: repeat-x;
-	color:#fff;
 	background-color: #434343;
+	background-image: url(images/tab-repeat.png);
+	background-repeat:repeat-x;
+	font-size: 12px;
+	color:#ffffff;
+	min-height: 50px;	
+	overflow:hidden;	
 }
 .push {
 	height: 3em; /* Very important */
@@ -369,6 +371,16 @@ select, input[type=checkbox], input[type=radio], input[type=button], input[type=
 	float: right;
 	padding-top:18px;
 	margin-right:10px;
+	background-color: #434343;
+	background-image: url(images/tab-repeat.png);
+	background-repeat:repeat-x;
+}
+.footer_emails{
+	float: left;
+	margin-right:5%;	
+	background-color: #434343;
+	background-image: url(images/tab-repeat.png);
+	background-repeat:repeat-x;	
 }
 #footer #platformmanager {
 	float: left;
