--- a/main/css/chamilo/default.css
+++ b/main/css/chamilo/default.css
@@ -520,13 +520,13 @@ margin-top:0;
  *  FOOTER STYLES                                    *
  *****************************************************/
 #footer {
-	background-color: #fff;
+	background-color: #037fb2;
 	background-image: url(images/bg-footer.gif);
 	background-repeat:repeat-x;
-	background-position:bottom;
 	font-size: 12px;
 	color:#ffffff;
-	height: 8em;
+	min-height: 100px;	
+	overflow:hidden;
 }
 .push {
 	height: 8em; /* Very important */
@@ -535,11 +535,24 @@ margin-top:0;
 	float: right;
 	padding-top:60px;
 	margin-right:5%;
+	background-color: #037fb2;
+	background-image: url(images/bg-footer.gif);
+	background-repeat:repeat-x;	
 }
+
+.footer_emails{
+	float: left;
+	margin-right:5%;	
+	background-color: #037fb2;
+	background-image: url(images/bg-footer.gif);
+	background-repeat:repeat-x;	
+}
+
 #footer #platformmanager {
 	float: left;
 	padding-top:60px;
 	margin-left:5%;
+
 }
 #footer a {
 	color:#f1d40d;
@@ -1823,6 +1836,7 @@ div.comments {
 .current_step {
 	font-weight: bold;
 }
+
 /************************************************************
   styles below here are not necessarily used in the current
 	release and the CVS files, they are from earlier versions,
