--- a/main/css/dokeos_classic/default.css
+++ b/main/css/dokeos_classic/default.css
@@ -387,10 +387,13 @@ input[text] {
  *  FOOTER STYLES                                    *
  *****************************************************/
 #footer {
-	height: 3.9em;
 	border-top: 1px solid #4171B5;
 	background-color: #E5EDF9;
+	background-color: #E5EDF9;
 	font-size: 12px;
+	color:#000;
+	min-height: 100px;	
+	overflow:hidden;	
 }
 .push {
 	height: 4em; /* Very important */
@@ -400,6 +403,10 @@ input[text] {
 	float: right;
 	padding-top:10px;
 	margin-right:10px;
+}
+.footer_emails{
+	float: left;
+	margin-right:5%;	
 }
 #footer #platformmanager {
 	float: left;
