changed icons for social network - partial CT#462

--- a/main/css/chamilo/default.css
+++ b/main/css/chamilo/default.css
@@ -3431,6 +3431,7 @@ div.image-social-content center.friend {
 #social-content-right {
 	height:auto;
 	overflow:hidden;	
+	margin-left:220px;
 }
 
 .social-content-image {
