--- a/main/css/cosmic_campus/default.css
+++ b/main/css/cosmic_campus/default.css
@@ -218,11 +218,13 @@ a.breadcrumb0 {
 
 /* footer styles */
 #footer {
-	height: 7em;
-	background-color: #fff;
+	background-color: #7171b7;
 	background-image: url(images/footer.jpg);
 	background-repeat: no-repeat;
-	color:#fff;
+	font-size: 12px;
+	color:#ffffff;
+	min-height: 50px;	
+	overflow:hidden;
 }
 .push {
 	height: 7em; /* Very important */
@@ -232,6 +234,16 @@ a.breadcrumb0 {
 	float: right;
 	padding-top:55px;
 	margin-right:10px;
+	background-color: #7171b7;
+	background-image: url(images/footer.jpg);
+	background-repeat: no-repeat;
+}
+.footer_emails{
+	float: left;
+	margin-right:5%;	
+	background-color: #7171b7;
+	background-image: url(images/footer.jpg);
+	background-repeat: no-repeat;
 }
 #footer #platformmanager {
 	float: left;
