--- a/main/css/dokeos_classic_2D/default.css
+++ b/main/css/dokeos_classic_2D/default.css
@@ -361,10 +361,13 @@ input.link_alike:hover {
 */
 
 #footer {
-	height: 3.9em;
-	background-color: #E5EDF9;
 	border-top: 1px solid #4171B5;
+	background-color: #E5EDF9;
+	background-color: #E5EDF9;
 	font-size: 12px;
+	color:#000;
+	min-height: 50px;	
+	overflow:hidden;	
 }
 .push {
 	height: 4em; /* Very important */
@@ -372,8 +375,12 @@ input.link_alike:hover {
 
 #footer .copyright {
 	float: right;
-	padding-top:20px;
+	padding-top:10px;
 	margin-right:10px;
+}
+.footer_emails{
+	float: left;
+	margin-right:5%;	
 }
 #footer #platformmanager {
 	float: left;
