--- a/main/css/silver_line/default.css
+++ b/main/css/silver_line/default.css
@@ -359,6 +359,7 @@ ul {
 	min-height: 100px;	
 	overflow:hidden;
 	background: url('images/headerbg.jpg');
+	width: 100%;
 }
 .push {
 	height: 4em; /* Very important */
