--- a/main/css/delicious_bordeaux/default.css
+++ b/main/css/delicious_bordeaux/default.css
@@ -358,7 +358,8 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	font-size: 12px;
 	color:#ffffff;
 	min-height: 50px;	
-	overflow:hidden;	
+	overflow:hidden;
+	width: 100%;	
 }
 .push {
 	height: 3em; /* Very important */
