--- a/main/css/fruity_orange/default.css
+++ b/main/css/fruity_orange/default.css
@@ -360,6 +360,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	color:#ffffff;
 	min-height: 50px;	
 	overflow:hidden;	
+	width: 100%;
 }
 .push {
 	height: 3em; /* Very important */
