--- a/main/css/chamilo/default.css
+++ b/main/css/chamilo/default.css
@@ -101,6 +101,13 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 .invisible {
 	color: #999;
 }
+.courseadminview table td a {
+	font-weight: bold;		
+}
+.Authoringview table td a {
+	font-weight: bold;		
+}
+
 .invisible a:link, .invisible a:visited {
 	color: #999;
 }
