--- a/main/css/academica/default.css
+++ b/main/css/academica/default.css
@@ -208,6 +208,7 @@ a.breadcrumb0 {
 	min-height: 100px;	
 	overflow:hidden;
 	width: 100%;
+	padding-bottom:10px;
 }
 .footer_emails{
 	float: left;
@@ -227,6 +228,10 @@ a.breadcrumb0 {
 	float: left;
 	padding-top:235px;
 	margin-left:10px;
+}
+#footer #coursemanager {
+	float: left;
+	margin-left: 10px;
 }
 #footerright {
 	margin-top: 10px;
