--- a/main/css/blue_lagoon/default.css
+++ b/main/css/blue_lagoon/default.css
@@ -364,6 +364,7 @@ select, input[type=checkbox], input[type=radio], input[type=button], input[type=
 	min-height: 50px;	
 	overflow:hidden;	
 	width: 100%;
+	padding-bottom:10px;
 }
 .push {
 	height: 3em; /* Very important */
