--- a/main/css/chamilo/default.css
+++ b/main/css/chamilo/default.css
@@ -574,6 +574,7 @@ margin-top:0;
 	min-height: 100px;	
 	overflow:hidden;
 	width: 100%;
+	padding-bottom:10px;
 }
 .push {
 	height: 8em; /* Very important */
