--- a/main/css/cool_blue/default.css
+++ b/main/css/cool_blue/default.css
@@ -342,13 +342,22 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
  *  FOOTER STYLES                                    *
  *****************************************************/
 #footer {
-	height:3em;
 	background-image: url(images/tab-repeat.png);
 	background-repeat: repeat-x;
-	color:#fff;
-	/* background-position: center -15px; */
 	background-color: #434343;
+	font-size: 12px;
+	color:#ffffff;
+	min-height: 50px;	
+	overflow:hidden;	
 	width: 100%;
+	padding-bottom:10px;
+}
+.footer_emails{
+	float: left;
+	margin-right:5%;	
+	background-image: url(images/tab-repeat.png);
+	background-repeat: repeat-x;
+	background-color: #434343;
 }
 .push {
 	height: 3em; /* Very important */
@@ -357,6 +366,9 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	float: right;
 	padding-top:18px;
 	margin-right:10px;
+	background-image: url(images/tab-repeat.png);
+	background-repeat: repeat-x;
+	background-color: #434343;
 }
 #footer #platformmanager {
 	float: left;
@@ -367,6 +379,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	color:#fff;
 }
 #footer #coursemanager {
+	float: left;
 	margin-left: 10px;
 }
 
