--- a/main/css/corporate/default.css
+++ b/main/css/corporate/default.css
@@ -218,6 +218,7 @@ a.breadcrumb0 {
 	min-height: 100px;	
 	overflow:hidden;	
 	width: 100%;
+	padding-bottom:10px;
 }
 .push {
 	height: 4em; /* Very important */
@@ -236,7 +237,10 @@ a.breadcrumb0 {
 	padding-top:8px;
 	margin-left:10px;
 }
-
+#footer #coursemanager {
+	float: left;
+	margin-left: 10px;
+}
 #footerright {
 	margin-top: 10px;
 	float: right;
