--- a/main/css/cosmic_campus/default.css
+++ b/main/css/cosmic_campus/default.css
@@ -226,6 +226,7 @@ a.breadcrumb0 {
 	min-height: 50px;	
 	overflow:hidden;
 	width: 100%;
+	padding-bottom:10px;
 }
 .push {
 	height: 7em; /* Very important */
@@ -250,6 +251,10 @@ a.breadcrumb0 {
 	float: left;
 	padding-top:55px;
 	margin-left:10px;
+}
+#footer #coursemanager {
+	float: left;
+	margin-left: 10px;
 }
 
 #footerright {
