--- a/main/css/dokeos_blue/default.css
+++ b/main/css/dokeos_blue/default.css
@@ -350,6 +350,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	min-height: 50px;	
 	overflow:hidden;
 	width: 100%;	
+	padding-bottom:10px;
 }
 .push {
 	height: 3em; /* Very important */
@@ -378,6 +379,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	color:#fff;
 }
 #footer #coursemanager {
+	float: left;
 	margin-left: 10px;
 }
 .copyright {
