--- a/main/css/dokeos_classic/default.css
+++ b/main/css/dokeos_classic/default.css
@@ -395,6 +395,7 @@ input[text] {
 	min-height: 50px;	
 	overflow:hidden;	
 	width: 100%;
+	padding-bottom:10px;
 }
 .push {
 	height: 4em; /* Very important */
@@ -414,7 +415,10 @@ input[text] {
 	padding-top:10px;
 	margin-left:10px;
 }
-
+#footer #coursemanager {
+	float: left;
+	margin-left: 10px;
+}
 #footer .copyright {
 	float: right;
 }
