--- a/main/css/dokeos_classic_2D/default.css
+++ b/main/css/dokeos_classic_2D/default.css
@@ -369,6 +369,7 @@ input.link_alike:hover {
 	min-height: 50px;	
 	overflow:hidden;
 	width: 100%;	
+	padding-bottom:10px;
 }
 .push {
 	height: 4em; /* Very important */
@@ -387,6 +388,10 @@ input.link_alike:hover {
 	float: left;
 	padding-top:20px;
 	margin-left:10px;
+}
+#footer #coursemanager {
+	float: left;
+	margin-left: 10px;
 }
 #myprofilefooter {
 	clear:both;
