--- a/main/css/empire_green/default.css
+++ b/main/css/empire_green/default.css
@@ -361,6 +361,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	min-height: 50px;	
 	overflow:hidden;	
 	width: 100%;
+	padding-bottom:10px;
 }
 .push {
 	height: 3em; /* Very important */
@@ -372,6 +373,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	background-color: #434343;
 	background-image: url(images/tab-repeat.png);
 	background-repeat:repeat-x;
+
 }
 .footer_emails{
 	float: left;
@@ -389,6 +391,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	color:#fff;
 }
 #footer #coursemanager {
+	float: left;
 	margin-left: 10px;
 }
 .copyright {
