--- a/main/css/medical/default.css
+++ b/main/css/medical/default.css
@@ -406,26 +406,43 @@ input[text] {
  *  FOOTER STYLES                                    *
  *****************************************************/
 #footer {
-	height:5em;
 	background-color: #fff;
 	background-image: url(images/footer.jpg);
 	background-repeat: no-repeat;
 	font-size: 12px;
 	font-weight:bold;
 	color:#666;
+	min-height: 50px;	
+	overflow:hidden;	
+	width: 100%;
+	padding-bottom:10px;
 }
 .push {
 	height: 5em; /* Very important */
+}
+.footer_emails{
+	float: left;
+	margin-right:5%;	
+	background-color: #fff;
+	background-image: url(images/footer.jpg);
+	background-repeat:repeat-x;	
 }
 #footer .copyright {
 	float: right;
 	padding-top:25px;
 	margin-right:10px;
+	background-color: #fff;
+	background-image: url(images/footer.jpg);
+	background-repeat: no-repeat;
 }
 #footer #platformmanager {
 	float: left;
 	padding-top:25px;
 	margin-left:10px;
+}
+#footer #coursemanager {
+	float: left;
+	margin-left: 10px;
 }
 #footer a {
 	color:#999999;
