--- a/main/css/public_admin/default.css
+++ b/main/css/public_admin/default.css
@@ -414,6 +414,7 @@ select, input[type=checkbox], input[type=radio], input[type=button], input[type=
 	min-height: 100px;	
 	overflow:hidden;	
 	width: 100%;
+	padding-bottom:10px;
 }
 .push {
 	height: 8em; /* Very important */
@@ -438,6 +439,10 @@ select, input[type=checkbox], input[type=radio], input[type=button], input[type=
 	float: left;
 	padding-top:60px;
 	margin-left:10px;
+}
+#footer #coursemanager {
+	float: left;
+	margin-left: 10px;
 }
 #footer a {
 	color:#f1d40d;
