--- a/main/css/royal_purple/default.css
+++ b/main/css/royal_purple/default.css
@@ -360,7 +360,8 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	color:#ffffff;
 	min-height: 50px;	
 	overflow:hidden;
-	width: 100%;	
+	width: 100%;
+	padding-bottom:10px;	
 }
 .push {
 	height: 3em; /* Very important */
@@ -384,6 +385,10 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	float: left;
 	padding-top:18px;
 	margin-left:10px;
+}
+#footer #coursemanager {
+	float: left;
+	margin-left: 10px;
 }
 #footer a {
 	color:#fff;
