--- a/main/css/steel_grey/default.css
+++ b/main/css/steel_grey/default.css
@@ -362,6 +362,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	min-height: 50px;	
 	overflow:hidden;
 	width: 100%;	
+	padding-bottom:10px;
 }
 .push {
 	height: 3em; /* Very important */
@@ -392,6 +393,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 }
 
 #footer #coursemanager {
+	float: left;
 	margin-left: 10px;
 }
 .copyright {
