--- a/main/css/tasty_olive/default.css
+++ b/main/css/tasty_olive/default.css
@@ -361,6 +361,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	min-height: 50px;	
 	overflow:hidden;
 	width: 100%;	
+	padding-bottom:10px;
 }
 .push {
 	height: 3em; /* Very important */
@@ -390,6 +391,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	color:#fff;
 }
 #footer #coursemanager {
+	float: left;
 	margin-left: 10px;
 }
 .copyright {
