improved style for navigation menu - partial CT#493

--- a/main/css/academica/default.css
+++ b/main/css/academica/default.css
@@ -1485,6 +1485,7 @@ div.system_announcement {
 	margin: 0;
 	text-decoration: none;
 	display: block;
+	line-height:24px;
 }
 #toolnavlist a:hover {
 	background: #fff;
