--- a/main/css/corporate/default.css
+++ b/main/css/corporate/default.css
@@ -1393,6 +1393,7 @@ span.radio {
 	margin: 0;
 	text-decoration: none;
 	display: block;
+	line-height:24px;
 }
 #toolnavlist a:hover {
 	background: #fff;
