--- a/main/css/baby_orange/default.css
+++ b/main/css/baby_orange/default.css
@@ -1475,6 +1475,7 @@ div.system_announcement {
 	margin: 0;
 	text-decoration: none;
 	display: block;
+	line-height:24px;
 }
 #toolnavlist a:hover {
 	background: #fff;
