--- a/main/css/dokeos_blue/default.css
+++ b/main/css/dokeos_blue/default.css
@@ -501,6 +501,7 @@ input[type="text"]:focus, input[type="password"]:focus, textarea:focus {
 	margin: 0;
 	text-decoration: none;
 	display: block;
+	line-height:24px;
 }
 #toolnavlist a:hover {
 	background: #fff;
