--- a/main/css/medical/default.css
+++ b/main/css/medical/default.css
@@ -567,6 +567,7 @@ input[text] {
 	margin: 0;
 	text-decoration: none;
 	display: block;
+	line-height:24px;
 }
 #toolnavlist a:hover {
 	background: #fff;
