--- a/main/css/sober_brown/default.css
+++ b/main/css/sober_brown/default.css
@@ -559,6 +559,7 @@ input[text] {
 	margin: 0;
 	text-decoration: none;
 	display: block;
+	line-height:24px;
 }
 #toolnavlist a:hover {
 	background: #fff;
