--- a/main/css/blue_lagoon/default.css
+++ b/main/css/blue_lagoon/default.css
@@ -3165,9 +3165,11 @@ div.image-social-content center.friend {
 	margin-left:auto;
 	margin-right:auto;
 }
+
 #social-content-right {
 	height:auto;
 	overflow:hidden;	
+	width:79%;
 }
 
 .social-content-image {
@@ -3178,11 +3180,12 @@ div.image-social-content center.friend {
 #social-content-left {
 	float:left;
 	height:auto;
-	margin-right:16px;
 	min-height:300px;
-	width:200px;
-	overflow:hidden;	
+	width:175px;
+	margin-right:10px;
+	overflow:hidden;
 }
+
 .social-content-description {
 	background:#ECE9D8;
 }
@@ -3369,15 +3372,18 @@ div.image-social-content center.friend {
 	overflow:hidden;
 }
 .social-box-left {
-	width:350px;
-	float:left;
-	height:auto;	
-}
-.social-box-right {
-	width:350px;
+	width:345px;
 	float:left;
 	height:auto;
-	margin-left:50px;
+	margin:0px;
+}
+
+.social-box-right {	
+	width:300px;
+	float:left;
+	height:auto;
+	margin-left:10px;	
+	overflow:hidden;
 }
 .social-box-container1 {
 	width:350px;
@@ -3504,6 +3510,8 @@ div.image-social-content center.friend {
 	z-index:5;
 	position:relative;
 	border:1px dotted #DDDDDD;
+	width:170px;
+	overflow:hidden;
 }
 
 .social-background-content .hidden_message {
