--- a/main/css/empire_green/default.css
+++ b/main/css/empire_green/default.css
@@ -3058,6 +3058,7 @@ div.image-social-content center.friend {
 #social-content-right {
 	height:auto;
 	overflow:hidden;	
+	width:79%;
 }
 
 .social-content-image {
@@ -3068,10 +3069,10 @@ div.image-social-content center.friend {
 #social-content-left {
 	float:left;
 	height:auto;
-	margin-right:16px;
 	min-height:300px;
-	width:200px;
-	overflow:hidden;	
+	width:175px;
+	margin-right:10px;
+	overflow:hidden;
 }
 .social-content-description {
 	background:#ECE9D8;
@@ -3263,15 +3264,18 @@ div.image-social-content center.friend {
 	overflow:hidden;
 }
 .social-box-left {
-	width:350px;
-	float:left;
-	height:auto;	
-}
-.social-box-right {
-	width:350px;
+	width:345px;
 	float:left;
 	height:auto;
-	margin-left:50px;
+	margin:0px;
+}
+
+.social-box-right {	
+	width:300px;
+	float:left;
+	height:auto;
+	margin-left:10px;	
+	overflow:hidden;
 }
 .social-box-container1 {
 	width:350px;
@@ -3394,13 +3398,12 @@ div.image-social-content center.friend {
 	padding:2px 0px 2px 0px;
 }
 
-
-
-
 .social-background-content {
 	z-index:5;
 	position:relative;
 	border:1px dotted #DDDDDD;
+	width:170px;
+	overflow:hidden;
 }
 
 .social-background-content .hidden_message {
